static/css/style.css
/************ general styling **************/

html {
    /* Set min-height to 100% to make sure 
    the footer sticks to the bottom */
    min-height: 100%;
    position: relative;
}

body {
    height: 100%;
    font-family: 'Helvetica';
    /* set margin so content can't
    go behind footer */
    margin: 0 0 140px;
    padding-bottom: 25px;
}

.container-grey {
    background-color: #212529d6;
}

.title {
    text-align: center;
}

img {
    align-content: center;
    width: 400px;
    max-width: 100%;
    height: 220px;
    max-height: inherit;
}

.btn {
    background-color: #0875c3;
    width: 272px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.add-cancel-button {
    width: 272px;
}

/* footer */

footer {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 156px;
   padding-top: 1em;
   background-color: #003189;
   color: white;
   z-index: 2;
}

.footer-links {
    margin-top: 1em;
}

.footer-link {
    color: white;
    transition: 0.5s;
}

.footer-link:hover {
    color: #ff005b;
    text-decoration: none;
}

.footer-copyright {
    margin-top: -0.5em;
}

/* these settings so there's no white
under footer on very small screen */
@media only screen and (max-width: 503px) {
    .footer-copyright {
    font-size: 0.8em;
    }
    .text-lighten-4 {
    font-size: 0.8em;
    }
    footer {
    height: 156px;
    }
}

/* navbar */

.title-image {
    height: 3em;
    width: auto;
}

.navbar {
    background-color: #003189;
    color: white;
}
 
@media only screen and (max-width: 991px) {
    nav {
        height: 80px;
    }
    .title-image {
        display: none;
    }
}

@media only screen and (max-width: 601px) {
    nav {
    height: 72px;
    }
}

.navbar-brand {
    color: white;
    font-size: 2.5em;
}

/* Set this media query so the nav links drop down straight
under title. Set min-width so toggler doesn't dissapear on
extremely small screens */
@media only screen and (min-width: 333px) and (max-width: 991px) {
    .navbar-dark .navbar-brand {
    margin-left: 60px;
    }
}

.navbar-dark .navbar-toggler {
    color: white;
    border-color: white;
}

.navbar-dark .navbar-toggler:focus {
    background-color: #003fb1;
}

@media only screen and (min-width: 992px) {
    .navbar-expand-lg .navbar-collapse {
    display: contents!important;
    }
}

.navbar-collapse {
    align-items: center;
    margin-left: -1em;
    margin-right: -1em;
    color: white;
    z-index: 2;
    text-align: center;
    background-color: #003189;
}

@media only screen and (max-width: 991px) {
    .nav-item {
    border-top: 2px solid white;
    z-index: 2;
    }
}

.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: #ff005b;
    background-color: #003fb1;
}

.navbar-expand-lg .navbar-nav .nav-link {
    color: white;
    transition: 0.5s;
}

@media (min-width: 992px) {
    .navbar-expand-lg .navbar-nav .nav-link {
    padding-bottom: 0;
    width: 150px;
    }
}

/* alert messages */

.alert-message {
    text-align: center;
}

.alert {
    margin-top: 1em;
    color: black;
    font-size: 1.5em;
}

/************ index.html **************/

.home-title {
    text-align: center;
    margin-top: 1em;
    color: #005bff;
}

.home-intro {
    text-align: center;
    font-size: 1.3em;
    color: #FFA400;
}

@media (min-width: 768px) {
    .home-intro {
    margin-top: 2em;
    }
}

.homepage-column {
    margin-top: 1em;
    margin-bottom: 1em;
}

.homepage-column-body {
    text-align: center;
    height: 100%;
    color: #ff005b;
    background-color: white;
    border: 2px solid #00ffa466;
    border-radius: 1em;
    padding: 1em;
}

img.responsive-img {
    max-width: 75%;
    height: auto;
}

@media screen and (min-width: 1200px) {
    .col-lg-4 {
    -ms-flex: 0 0 33.33%;
    flex: 0 0 33.33%;
    max-width: 33.33%;
    }
}

@media screen and (min-width: 992px) and (max-width: 1199px) {
    .col-md-6 {
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    }
}

/************ exercises.html **************/

.add-exercise-link {
    margin-top: 1em;
    color: #00ffa4;
    text-align: center;
}

.btn-add {
    background-color: #ff005b;
    color: white;
    margin: 1em 1em 2em;
    width: 280px;
    max-width: 90%;
    margin-left: 5%;
    transition: 0.5s;
}

.btn-add:hover {
    background-color: white;
    color: #005bff;
}

.filter {
    text-align: center;
}

.select-wrapper input.select-dropdown {
    text-align: center;
    color: black;
}

.dropdown-content li {
    text-align: center;
}

.dropdown-content li span {
    color: #002362;
}

.dropdown-content li span:hover {
    background-color: #002362b8;
    color: white;
}

.filter-buttons {
    margin-top: 1em;
}

.filter-button {
    background-color: #005bff;
    color: white;
    transition: 0.5s;
    width: 140px;
    padding: 0 1rem;
}

.filter-button:hover {
    background-color: white;
    color: #FFA400;
}

.cancel-button {
    background-color: #FFA400;
}

.cancel-button:hover {
    color: #005bff;
}

.exercises-container {
    margin-top: 1em;
    margin-bottom: 1em;
}

.exercises-container-body {
    text-align: center;
    height: 100%;
    color: #002362;
    background-color: #cccccc99;
    border: 2px #002362 solid;
    border-radius: 5px;
    padding: 1em;
}

.exercises-container-body h4 {
    color: #ff005b;
}

.exercises-container-body h6 {
    display: table;
    margin: 0px auto 0px auto;
    color: #00ffa4;
    background-color: black;
    border: 1px solid #00ffa4;
    padding: 5px 1em;
    border-radius: 5px;
    margin-bottom: 0.5em;
}

.small-img {
    width: 400px;
    max-width: 90%;
    height: auto;
}

.btn-view {
    background-color: #FFA400;
    max-width: 90%;
    margin-left: 5%;
}

/* "view whole exercise" doesn't fit on 
very small screen. This way, the user
can see the whole text */
@media screen and (max-width: 360px) {
    .btn-view {
        height: 5em;
    }
    .btn-view i {
        display: none;
    }
}


/************* viewexercise.html ****************/

.view-exercise {
    text-align: center;
}

.view-exercise-title {
    color: #ff005b;
}

.view-exercise p {
    font-size: 1.2em;
}

.view-exercise h5 {
    display: table;
    margin: 0 auto 0 auto;
    color: black;
    background-color: #00ffa4;
    padding: 5px 1em;
    border: 1px solid black;
    border-radius: 5px;
    margin-bottom: 0.5em;
}

.image-view {
    width: 600px;
    height: auto;
    max-width: 90%;
    margin-bottom: 2em;
}

/************* stats.html ****************/

.statistics-title {
    text-align: center;
}

.statistics {
    margin-top: 1em;
    margin-bottom: 1em;
}

.statistics-body {
    text-align: center;
    height: 100%;
    color: #FFA400;
    background-color: white;
    border: 2px solid #00ffa466;
    border-radius: 6em;
    margin-bottom: 1em;
    padding: 1em;
}

.statistics h5 {
    color: black;
}

.fo-icon {
    color: #005bff;
    font-size: 5em;
    margin-top: 1rem;
}

/************* about.html ****************/

.about {
    text-align: center;
}

.about-description {
    color: #00ffa4;
    margin: 1em;
    font-size: 1.3em;
}

.about-image {
    width: 350px;
    max-width: 100%;
    height: 200px;
}

.sponsors p {
    font-size: 1.3em;
}

.sponsors a {
    color: #FFA400;
    text-decoration: underline #00ffa4;
    transition: 0.5s;
}

.sponsors a:hover {
    color: #005bff;
    text-decoration: none;
}

/************* add.html ****************/

.add-exercise-text {
    text-align: center;
    color: #00ffa4;
    font-size: 1.5em;
    margin-top: 1em;
}

.add-exercise-form {
    background-color: white;
    border-radius: 1em;
    margin-top: 1em;
    margin-bottom: 1em;
}

@media screen and (min-width: 768px) {
    .add-exercise-form form {
    width: 80%;
    margin-left: 10%;
    }
}

@media screen and (min-width: 992px) {
    .add-exercise-form form {
        width: 60%;
        margin-left: 20%;
    }
}

.input-field {
    color: #003189;
}

.input-field label {
    color: black;
    margin-left: 1em;
    font-size: 1em;
}

.type-checkbox {
    margin-top: 2em;
}

.exercise-type-lable {
    color: black;
    margin-left: 1em;
}

.upload-image-btn {
    background-color:#FFA400;
    margin: 0;
}

.cancel-button a {
    color: white;
}

.upload-image-btn {
    width: 260px;
}

.add-cancel-button {
    width: 260px;
}

.add-cancel-button-red {
    width: 260px;
    background-color: red;
}

@media screen and (max-width: 540px) {
    .add-exerc-button {
        width: 240px;
    }
}

/************* editexercise.html ****************/

.delete-exercise {
    text-align: center;
}

.delete-exerc-btn {
    color: red;
    background-color: black;
    transition: 0.5s;
}

.delete-exerc-btn:hover {
    color: black;
    background-color: white;
}

